--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <noscript>
+      <p>NODE_ENV:<%= process.env.NODE_ENV %></p>
+      <p>hash:<%= process.env.VUE_APP_GIT_HASH %></p>
+      <p>tsg:<%= process.env.VUE_APP_GIT_TAG %></p>
       <strong>We're sorry but tryy0110 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
